[gd_scene load_steps=5 format=3 uid="uid://cptwvbalrevu4"]

[ext_resource type="Script" path="res://Scenes/Components/StatsMembersMoneyPanel/statsmembersmoneypanel.gd" id="1_i7jj8"]
[ext_resource type="Texture2D" uid="uid://b8ygwfexilvc2" path="res://Assets/Images/members.png" id="2_23csp"]
[ext_resource type="Texture2D" uid="uid://chhgeqklbgawv" path="res://Assets/Images/money.png" id="3_oxus8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2042a"]
content_margin_left = 15.0
content_margin_top = 5.0
content_margin_right = 15.0
content_margin_bottom = 5.0
bg_color = Color(0, 0, 0, 0.490196)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="StatsMMPanelWrapper" type="BoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 0
script = ExtResource("1_i7jj8")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_2042a")

[node name="PanelWrapper" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="Content" type="VBoxContainer" parent="PanelContainer/PanelWrapper"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_constants/separation = 5

[node name="Members" type="HBoxContainer" parent="PanelContainer/PanelWrapper/Content"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="MembersImage" type="TextureRect" parent="PanelContainer/PanelWrapper/Content/Members"]
layout_mode = 2
texture = ExtResource("2_23csp")
expand_mode = 3

[node name="MembersMinValue" type="Label" parent="PanelContainer/PanelWrapper/Content/Members"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_font_sizes/font_size = 15
text = "--- ---"

[node name="Comparator2" type="Label" parent="PanelContainer/PanelWrapper/Content/Members"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_font_sizes/font_size = 15
text = "/"

[node name="MembersValue" type="Label" parent="PanelContainer/PanelWrapper/Content/Members"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_font_sizes/font_size = 15
text = "--- ---"

[node name="Comparator" type="Label" parent="PanelContainer/PanelWrapper/Content/Members"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_font_sizes/font_size = 15
text = "/"

[node name="MembersMaxValue" type="Label" parent="PanelContainer/PanelWrapper/Content/Members"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_font_sizes/font_size = 15
text = "--- ---"

[node name="Money" type="HBoxContainer" parent="PanelContainer/PanelWrapper/Content"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="MoneyImage" type="TextureRect" parent="PanelContainer/PanelWrapper/Content/Money"]
layout_mode = 2
texture = ExtResource("3_oxus8")
expand_mode = 3

[node name="MoneyValue" type="Label" parent="PanelContainer/PanelWrapper/Content/Money"]
layout_mode = 2
theme_override_font_sizes/font_size = 15
text = "--- ---"
